j--/tests/pass/Modulo.java
// Modulo.java
// Authors : Creciun Eduard, Lambert Andrew

package pass;

public class Modulo
{
	public int modulo(int x, int y){
		return x%y;
	}
}