j--/tests/fail/Modulo.java
// Modulo.java fail test
// Authors : Creciun Eduard, Lambert Andrew

package fail;

import java.lang.System;

public class Modulo
{
	public static void main(String [] args)
	{
		System.out.println('a'%42);
	}
}